--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang='en'>
-<head>
-    <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-    <title>My Games</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-</head>
-<body>
-    <div style="text-align:center;font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: xx-large;"><pre>
-<p>Musa's PERSONAL coded games!</p>
- <button class="button button1" onclick="window.location.href='drag-game';">15 Coins</button>
- <button class="button button2" onclick="window.location.href='finish-line';">"Race"</button>
-</pre>
-<script src="script.js"></script>
-        <div id="restart-button-container"></div>
-    </div>
-</body>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Mediasurf file</title>
+		<link rel="stylesheet" href="Styles.css" />
+	</head>
+	<body>
+		<div class="left-side" style="font-family : Verdana, Geneva, Tahoma, sans-serif; font-size: 59px;">
+			Hi, my name is Musa I am 9 and in grade 4 if you know me from school
+			welcome to my website! Me and my dad coded this website together. I have a
+			youtube channel called Coolplay.
+			<a href="https://www.youtube.com/channel/UCblJ9BeI8BrWgsNKnj8S8aw">Click here to go to my channel.</a>
+            Also, if you are from my school good job making it on here!
+            Click on the buttons on the right side to see some games i have been working on!
+            I also made a button to go to my channel! 
+		</div>
+		<div class="right-side"> <button class="button Games" onclick="window.location.href='games.html';">My games</button> </div>
+	</body>
 </html>
