--- a/index.html
+++ b/index.html
@@ -3,19 +3,48 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Mediasurf file</title>
+		<title>Musa Mediasurf</title>
 		<link rel="stylesheet" href="Styles.css" />
 	</head>
 	<body>
-		<div class="left-side" style="font-family : Verdana, Geneva, Tahoma, sans-serif; font-size: 59px;">
-			Hi, my name is Musa I am 9 and in grade 4 if you know me from school
-			welcome to my website! Me and my dad coded this website together. I have a
-			youtube channel called Coolplay.
-			<a href="https://www.youtube.com/channel/UCblJ9BeI8BrWgsNKnj8S8aw">Click here to go to my channel.</a>
-            Also, if you are from my school good job making it on here!
-            Click on the buttons on the right side to see some games i have been working on!
-            I also made a button to go to my channel! 
+		<div class="container">
+			<div
+				class="left-side"
+				style="
+					font-family: Verdana, Geneva, Tahoma, sans-serif;
+					font-size: 59.5px;
+					text-align: center;
+				"
+			>
+				Hi, my name is Musa I am 9 and in grade 4 if you know me from school
+				welcome to my website! Me and my dad coded this website together. I have
+				a youtube channel called Coolplay.
+				<a href="https://www.youtube.com/channel/UCblJ9BeI8BrWgsNKnj8S8aw"
+					>Click here to go to my channel.</a
+				>
+				Also, if you are from my school good job getting on here! Click on the
+				buttons on the right side to see my channel and some games I've been
+				working on!
+			</div>
+			<div class="right-side" style="text-align: center">
+				<button
+					class="button Games"
+					onclick="window.location.href='games.html';"
+				>
+					My Games
+				</button>
+				<button
+					class="button Games"
+					onclick="window.location.href='https://www.youtube.com/channel/UCblJ9BeI8BrWgsNKnj8S8aw';"
+				>
+					My Channel
+				</button>
+				<hr style="color: solid grey; font-size: 2px" />
+				<p style="font-size: 100px; margin-top: 20px">
+					I have worked very hard on my channel and those games so please check
+					them out! I hope you love them!
+				</p>
+			</div>
 		</div>
-		<div class="right-side"> <button class="button Games" onclick="window.location.href='games.html';">My games</button> </div>
 	</body>
 </html>
