--- a/games.html
+++ b/games.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 <body>
-    <div style="text-align:center;font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: xx-large;"><pre>
+    <div style="text-align:center;font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 100px;"><pre>
 <p>Musa's PERSONAL coded games!</p>
  <button class="button button1" onclick="window.location.href='drag-game';">15 Coins</button>
  <button class="button button2" onclick="window.location.href='finish-line';">"Race"</button>
