--- a/games.html
+++ b/games.html
@@ -4,7 +4,7 @@
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <title>My Games</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="Styles.css" />
 </head>
 <body>
     <div style="text-align:center;font-family: Verdana, Geneva, Tahoma, sans-serif; font-size: 100px;"><pre>
