--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 				Hi, my name is Musa I am 9 and in grade 4 if you know me from school
 				welcome to my website! Me and my dad coded this website together. I have
 				a youtube channel called Coolplay.
-				<a href="https://www.youtube.com/channel/UCblJ9BeI8BrWgsNKnj8S8aw"
+				<a
+					href="https://www.youtube.com/channel/UCblJ9BeI8BrWgsNKnj8S8aw"
+					target="_blank"
 					>Click here to go to my channel.</a
 				>
 				Also, if you are from my school good job getting on here! Click on the
@@ -35,7 +37,7 @@
 				</button>
 				<button
 					class="button Games"
-					onclick="window.location.href='https://www.youtube.com/channel/UCblJ9BeI8BrWgsNKnj8S8aw';"
+					onclick="window.open('https://www.youtube.com/channel/UCblJ9BeI8BrWgsNKnj8S8aw', '_blank');"
 				>
 					My Channel
 				</button>
