index.html update

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 				>
 					My Games
 				</button>
-				<button
-					class="button Games"
-					onclick="window.open('https://www.youtube.com/channel/UCblJ9BeI8BrWgsNKnj8S8aw', '_blank');"
+                <button
+                    class="button Channel"
+                    onclick="window.open('https://www.youtube.com/channel/UCblJ9BeI8BrWgsNKnj8S8aw', '_blank');"
 				>
 					My Channel
 				</button>
