Index.html and styles.css updated.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				class="left-side"
 				style="
 					font-family: Verdana, Geneva, Tahoma, sans-serif;
-					font-size: 59.5px;
+					font-size: 370%;
 					text-align: center;
 				"
 			>
@@ -36,13 +36,13 @@
 					My Games
 				</button>
                 <button
-                    class="button Channel"
+                    class="button Games"
                     onclick="window.open('https://www.youtube.com/channel/UCblJ9BeI8BrWgsNKnj8S8aw', '_blank');"
 				>
 					My Channel
 				</button>
 				<hr style="color: solid grey; font-size: 2px" />
-				<p style="font-size: 100px; margin-top: 20px">
+				<p style="font-size: 740%; margin-top: 20px">
 					I have worked very hard on my channel and those games so please check
 					them out! I hope you love them!
 				</p>
